add coduime and other features

--- a/tmux/tmux.reset.conf
+++ b/tmux/tmux.reset.conf
@@ -37,3 +37,7 @@ bind d detach
 # bind x kill-pane -D
 bind s choose-session
 # bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind -r i run-shell "tmux neww ~/.dotFiles/scripts/tmux-cht.sh"
+bind -r N neww bash -c 'nvim /home/ra0_0d/.dotFiles/nvim'
+bind -r Z neww bash -c 'nvim /home/ra0_0d/.dotFiles/.zshrc'
+bind -r T neww bash -c 'nvim /home/ra0_0d/.dotFiles/tmux'
