--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,7 +17,8 @@ set -g renumber-windows on       # renumber all windows when any window is close
 set -g set-clipboard on          # use system clipboard
 set -g status-position top      # macOS / darwin style
 # set -g default-terminal "${TERM}"
-setw -g mode-keys vi
+# setw -g mode-keys vi
+set -g mouse
 # set -g pane-border-style fg=magenta
 # set -g pane-active-border bg=none
 # set -g pane-active-border bg=magenta
