use chad-nvim as primary config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -42,17 +42,24 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'fcsonline/tmux-thumbs'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'wfxr/tmux-fzf-url'
-set -g @plugin 'catppuccin/tmux' # My fork that holds the meetings script bc I'm lazy af
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-battery'
 # set -g @plugin 'omerxx/tmux-sessionx'
 # echo "in tmux"
-# set -g @sessionx-bind 'o'
 # set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
-
+# set -g @sessionx-auto-accept 'off'
+# set -g @sessionx-custom-paths '~/.dotFiles'
+# set -g @sessionx-bind 'o'
+# set -g @sessionx-x-path '~/.dotFiles'
+# set -g @sessionx-window-height '85%'
+# set -g @sessionx-window-width '75%'
+# set -g @sessionx-zoxide-mode 'on'
+# set -g @sessionx-custom-paths-subdirectories 'false'
+# set -g @sessionx-filter-current 'false'
 # set -g @continuum-restore 'on'
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
