--- a/tmux/tmux.reset.conf
+++ b/tmux/tmux.reset.conf
@@ -8,6 +8,8 @@ bind * list-clients
 
 bind H previous-window
 bind L next-window
+bind ^l switch-client 
+bind ^h switch-client -p
 
 bind r command-prompt "rename-window %%"
 bind R source-file ~/.config/tmux/tmux.conf
@@ -34,10 +36,11 @@ bind * setw synchronize-panes
 bind P set pane-border-status
 bind c new-window -c '#{pane_current_path}' #!important
 bind d detach
-# bind x kill-pane -D
+bind x kill-pane -t 0 
 bind s choose-session
 # bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind -r i run-shell "tmux neww ~/.dotFiles/scripts/tmux-cht.sh"
+bind -r S run-shell "tmux neww ~/.dotFiles/scripts/tmux-sessionizer.sh"
 bind -r N neww bash -c 'nvim /home/ra0_0d/.dotFiles/nvim'
 bind -r Z neww bash -c 'nvim /home/ra0_0d/.dotFiles/.zshrc'
 bind -r T neww bash -c 'nvim /home/ra0_0d/.dotFiles/tmux'
