add starship config and remove unused tmux plugins

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,18 +34,16 @@ bind C-Space send-prefix
 
 # bind-key -r B run-shell "~/.config/tmux/scripts/sessionizer.sh ~/omerxx/omerxx.com"
 
-set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
-set -g @fzf-url-history-limit '2000'
-set -g @fzf-url-open "explorer.exe"
+# set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
+# set -g @fzf-url-history-limit '2000'
+# set -g @fzf-url-open "explorer.exe"
 
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @plugin 'tmux-plugins/tmux-resurrect'
 # set -g @plugin 'tmux-plugins/tmux-continuum'
 # set -g @plugin 'fcsonline/tmux-thumbs'
-set -g @plugin 'sainnhe/tmux-fzf'
-set -g @plugin 'wfxr/tmux-fzf-url'
+# set -g @plugin 'sainnhe/tmux-fzf'
+# set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-battery'
 # set -g @plugin 'omerxx/tmux-sessionx'
