update tmux config and fix lsp issues in chad-nvim

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,35 +27,41 @@ set -g mouse
 # set -g pane-border-style 'fg=colour235,bg=terminal' 
 # set -g pane-active-border-style 'fg=colour51,bg=black'
 # set -g default-terminal tmux-256color
-# set -as terminal-overrides ",alacritty*:Tc"
+set -as terminal-overrides ",alacritty*:Tc"
+
 set -g prefix C-Space
 bind C-Space send-prefix
+
+# set -g prefix C-b
+
+# set -gu prefix2 C-b
+# bind C-b send-prefix
 
 
 # bind-key -r B run-shell "~/.config/tmux/scripts/sessionizer.sh ~/omerxx/omerxx.com"
 
-# set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
-# set -g @fzf-url-history-limit '2000'
-# set -g @fzf-url-open "explorer.exe"
+set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
+set -g @fzf-url-history-limit '2000'
+set -g @fzf-url-open "explorer.exe"
 
 set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'tmux-plugins/tmux-resurrect'
 # set -g @plugin 'tmux-plugins/tmux-continuum'
 # set -g @plugin 'fcsonline/tmux-thumbs'
-# set -g @plugin 'sainnhe/tmux-fzf'
-# set -g @plugin 'wfxr/tmux-fzf-url'
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-battery'
-# set -g @plugin 'omerxx/tmux-sessionx'
+set -g @plugin 'omerxx/tmux-sessionx'
 # echo "in tmux"
 # set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
 # set -g @sessionx-auto-accept 'off'
 # set -g @sessionx-custom-paths '~/.dotFiles'
-# set -g @sessionx-bind 'o'
+set -g @sessionx-bind 'o'
 # set -g @sessionx-x-path '~/.dotFiles'
-# set -g @sessionx-window-height '85%'
+set -g @sessionx-window-height '85%'
 # set -g @sessionx-window-width '75%'
-# set -g @sessionx-zoxide-mode 'on'
+set -g @sessionx-zoxide-mode 'on'
 # set -g @sessionx-custom-paths-subdirectories 'false'
 # set -g @sessionx-filter-current 'false'
 # set -g @continuum-restore 'on'
