--- a/tmux/tmux.reset.conf
+++ b/tmux/tmux.reset.conf
@@ -8,8 +8,8 @@ bind * list-clients
 
 bind H previous-window
 bind L next-window
-bind ^l switch-client 
-bind ^h switch-client -p
+bind ^l switch
+bind ^h switch -p
 
 bind r command-prompt "rename-window %%"
 bind R source-file ~/.config/tmux/tmux.conf
@@ -38,9 +38,11 @@ bind c new-window -c '#{pane_current_path}' #!important
 bind d detach
 bind x kill-pane -t 0 
 bind s choose-session
-# bind-key -T copy-mode-vi v send-keys -X begin-selection
+# bind s run-shell -b "$TMUX_PLUGIN_MANAGER_PATH/tmux-fzf/scripts/session.sh switch"
+# bind ^n run-shell -b "$TMUX_PLUGIN_MANAGER_PATH/tmux-fzf/scripts/session.sh switch 1"
+bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind -r i run-shell "tmux neww ~/.dotFiles/scripts/tmux-cht.sh"
 bind -r S run-shell "tmux neww ~/.dotFiles/scripts/tmux-sessionizer.sh"
-bind -r N neww bash -c 'nvim /home/ra0_0d/.dotFiles/nvim'
+bind -r N neww bash -c 'nvim /home/ra0_0d/.dotFiles/$NVIM_APPNAME'
 bind -r Z neww bash -c 'nvim /home/ra0_0d/.dotFiles/.zshrc'
 bind -r T neww bash -c 'nvim /home/ra0_0d/.dotFiles/tmux'
