add more nvim configs

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,8 +34,9 @@ bind C-Space send-prefix
 
 # set -g prefix C-b
 
-# set -gu prefix2 C-b
+set -gu prefix2 C-b
 # bind C-b send-prefix
+set-option -g prefix2 C-b
 
 
 # bind-key -r B run-shell "~/.config/tmux/scripts/sessionizer.sh ~/omerxx/omerxx.com"
