--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,7 +6,7 @@ source-file ~/.config/tmux/tmux.reset.conf
 # set-option -ga terminal-overrides ",*-256color*:TC"
 # set-option -g default-terminal screen-254color
 # set-option -g terminal-overrides ',xterm-256color:RGB'
-set -g default-terminal "tmux-256color"
+# set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 set -g prefix ^space
 set -g base-index 1              # start indexing windows at 1 instead of 0
@@ -16,7 +16,7 @@ set -g history-limit 1000000     # increase history size (from 2,000)
 set -g renumber-windows on       # renumber all windows when any window is closed
 set -g set-clipboard on          # use system clipboard
 set -g status-position top      # macOS / darwin style
-# set -g default-terminal "${TERM}"
+set -g default-terminal "${TERM}"
 # setw -g mode-keys vi
 set -g mouse
 # set -g pane-border-style fg=magenta
@@ -38,51 +38,89 @@ set -gu prefix2 C-b
 # bind C-b send-prefix
 set-option -g prefix2 C-b
 
+set -s copy-command 'wl-copy'
+# set -s paste-buffer 'wl-paste'
+
+bind p paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi V send-keys -X rectangle-toggle
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'wl-copy'
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'wl-copy'
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'wl-copy'
 
 # bind-key -r B run-shell "~/.config/tmux/scripts/sessionizer.sh ~/omerxx/omerxx.com"
 
 set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
 set -g @fzf-url-history-limit '2000'
-set -g @fzf-url-open "explorer.exe"
 
 set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-resurrect'
-# set -g @plugin 'tmux-plugins/tmux-continuum'
-# set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'omerxx/tmux-sessionx'
-# echo "in tmux"
-# set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
-# set -g @sessionx-auto-accept 'off'
-# set -g @sessionx-custom-paths '~/.dotFiles'
-set -g @sessionx-bind 'o'
-# set -g @sessionx-x-path '~/.dotFiles'
-set -g @sessionx-window-height '85%'
-# set -g @sessionx-window-width '75%'
-set -g @sessionx-zoxide-mode 'on'
-# set -g @sessionx-custom-paths-subdirectories 'false'
-# set -g @sessionx-filter-current 'false'
-# set -g @continuum-restore 'on'
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
-set -g @catppuccin_status_modules_right "application battery user  date_time"
-set -g @catppuccin_status_modules_left "session"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_right_separator_inverse "no"
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-set -g @catppuccin_directory_text "#{pane_current_path}"
-# set -g @catppuccin_status_modules_right "... battery ..."
-# set -g @catppuccin_meetings_text "#($HOME/.config/tmux/scripts/cal.sh)"
-set -g @catppuccin_date_time_text "%H:%M"
-run '~/.tmux/plugins/tpm/tpm'
+set -g @plugin 'arl/gitmux'
+# set -g @plugin 'tmux-plugins/tmux-online-status'
+
+# Configure Catppuccin
+set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_status_background "none"
+set -g @catppuccin_window_status_style "none"
+set -g @catppuccin_pane_status_enabled "off"
+set -g @catppuccin_pane_border_status "off"
+
+set -g @catppuccin_window_current_text " #T"
+# set -ogq @catppuccin_window_text " #W"
+# Configure Online
+# set -g @online_icon "ok"
+# set -g @offline_icon "nok"
+
+# status left look and feel
+
+set -g status-left-length 100
+set -g status-left ""
+set -ga status-left "#{?client_prefix,#{#[bg=#{@thm_red},fg=#{@thm_bg},bold]  #S },#{#[bg=#{@thm_bg},fg=#{@thm_green}]  #S }}"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_maroon}]  #{pane_current_command} "
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_blue}]  #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}} "
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]#{?window_zoomed_flag,│,}"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_yellow}]#{?window_zoomed_flag,  zoom ,}"
+
+# status right look and feel
+set -g status-right-length 100
+set -g status-right ""
+set -ga status-right "#{?#{e|>=:10,#{battery_percentage}},#{#[bg=#{@thm_red},fg=#{@thm_bg}]},#{#[bg=#{@thm_bg},fg=#{@thm_pink}]}} #{battery_icon} #{battery_percentage} "
+set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]"
+# set -ga status-right "#[bg=#{@thm_bg}]#{?#{==:#{online_status},ok},#[fg=#{@thm_mauve}] 󰖩 on ,#[fg=#{@thm_red},bold]#[reverse] 󰖪 off }"
+set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
+set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_blue}] 󰭦 %Y-%m-%d 󰅐 %H:%M "
+
+
+# Configure Tmux
+set -g status-position top
+set -g status-style "bg=#{@thm_bg}"
+set -g status-justify "absolute-centre"
+
+# pane border look and feel
+# setw -g pane-border-status top
+# setw -g pane-border-format ""
+# setw -g pane-active-border-style "bg=#{@thm_bg},fg=#{@thm_overlay_0}"
+# setw -g pane-border-style "bg=#{@thm_bg},fg=#{@thm_surface_0}"
+# setw -g pane-border-lines single
+
+# window look and feel
+set -wg automatic-rename on
+set -g automatic-rename-format "#{pane_current_command}"
+
+set -g window-status-format " #I#{?#{!=:#{window_name},Window},: #W,} "
+set -g window-status-style "bg=#{@thm_bg},fg=#{@thm_blue}"
+set -g window-status-last-style "bg=#{@thm_bg},fg=#{@thm_blue}"
+set -g window-status-activity-style "bg=#{@thm_red},fg=#{@thm_bg}"
+set -g window-status-bell-style "bg=#{@thm_red},fg=#{@thm_bg},bold"
+set -gF window-status-separator "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}]│"
+
+set -g window-status-current-format " #I#{?#{!=:#{window_name},Window},: #W,} "
+set -g window-status-current-style "bg=#{@thm_red},fg=#{@thm_bg},bold"
+run '~/.dotFiles/tmux/plugins/tpm/tpm'
