--- a/tmux/tmux.reset.conf
+++ b/tmux/tmux.reset.conf
@@ -36,7 +36,7 @@ bind * setw synchronize-panes
 bind P set pane-border-status
 bind c new-window -c '#{pane_current_path}' #!important
 bind d detach
-bind x kill-pane -t 0 
+bind x kill-pane  
 bind s choose-session
 bind g run-shell -b "$TMUX_PLUGIN_MANAGER_PATH/tmux-fzf/scripts/session.sh switch"
 bind-key -T copy-mode-vi v send-keys -X begin-selection
@@ -45,3 +45,5 @@ bind -r S run-shell "tmux neww ~/.dotFiles/scripts/tmux-sessionizer.sh"
 bind -r N neww bash -c 'nvim ~/.dotFiles/$NVIM_APPNAME'
 bind -r Z neww bash -c 'nvim /home/ra0_0d/.dotFiles/.zshrc'
 bind -r T neww bash -c 'nvim /home/ra0_0d/.dotFiles/tmux'
+
+
