add useful zsh scripts

--- a/tmux/tmux.reset.conf
+++ b/tmux/tmux.reset.conf
@@ -63,4 +63,23 @@ bind -r i run-shell "tmux neww ~/.dotFiles/scripts/tmux-cht.sh"
 bind -r S run-shell "tmux neww ~/.dotFiles/scripts/tmux-sessionizer.sh"
 bind -r N neww bash -c 'cd ~/.dotFiles/$NVIM_APPNAME && nvim'
 bind -r Z neww bash -c 'cd ~/.dotFiles && nvim .zshrc'
-bind -r T neww bash -c 'cd ~/.dotFiles/tmux && nvim'
+bind -r T neww bash -c 'cd ~/.dotFiles/tmux && APP_NAME=lazy-nvim nvim'
+
+
+# OPEN FILES
+# Bind Alt+o to capture filename:line:col and open in nvim
+# bind -n M-o copy-mode \;\
+#   send-keys -X copy-pipe "xargs -I {} tmux split-window -h 'vim {}'"
+
+# Version that shows what was captured
+# bind -n M-o copy-mode \; send-keys -X search-backward "(.*):(\d+):(\d+)" \; \
+#   send-keys -X copy-pipe "xargs -I {} tmux split-window -h 'nvim +\"call cursor(\\\$(echo {} | cut -d: -f2), \\\$(echo {} | cut -d: -f3))\" \\\$(echo {} | cut -d: -f1)'"
+
+
+bind -n M-o copy-mode \;\
+  send-keys -X copy-pipe \
+  "awk -F: '{ col = (\$3 ? \$3 : 1); printf(\"nvim +\\\"call cursor(%d,%d)\\\" %s\", \$2, col, \$1) }' | xargs -I {} wl-copy  '{}'"
+
+
+bind -n M-f copy-mode \;\
+  send-keys -X  copy-pipe "xargs -I {} ~/.dotFiles/scripts/open-in-vim {}"
