feat(tmux): disable C-Space prefix if in nvim

--- a/tmux/tmux.reset.conf
+++ b/tmux/tmux.reset.conf
@@ -1,7 +1,6 @@
-# First remove *all* keybindings
-# unbind-key -a
-# Now reinsert all the regular tmux keys
-# bind ^X lock-server
+#
+# Detect if the current pane is running Neovim
+bind -n C-Space if-shell "[ #{window_name} != 'nvim' ]" "send-keys -K C-b " # bind ^X lock-server
 bind ^C new-window -c "$HOME"
 bind ^D detach
 bind * list-clients
