fix(tmux): send C-space to nvim instead of prefix

--- a/tmux/tmux.reset.conf
+++ b/tmux/tmux.reset.conf
@@ -1,6 +1,7 @@
 #
 # Detect if the current pane is running Neovim
 bind -n C-Space if-shell "[ #{window_name} != 'nvim' ]" "send-keys -K C-b " # bind ^X lock-server
+bind -n C-Space if-shell "[ #{window_name} = 'nvim' ]" "send-keys  C-space " # bind ^X lock-server
 bind ^C new-window -c "$HOME"
 bind ^D detach
 bind * list-clients
