chore(options): disable o in formatoptions

--- a/tmux/tmux.reset.conf
+++ b/tmux/tmux.reset.conf
@@ -1,7 +1,16 @@
 #
 # Detect if the current pane is running Neovim
-bind -n C-Space if-shell "[ #{window_name} != 'nvim' ]" "send-keys -K C-b " # bind ^X lock-server
-bind -n C-Space if-shell "[ #{window_name} = 'nvim' ]" "send-keys  C-space " # bind ^X lock-server
+# NOTE: Works but it misses it doesn't types the keys instead of passing them directly to nvim
+# bind -n C-Space if-shell "[ #{window_name} != 'nvim' ]" "send-keys -K C-b " "send-keys -l Space-c" # bind ^X lock-server
+
+# Use hooks to dynamically bind/unbind C-Space based on whether nvim is running
+# set-hook -g session-window-changed { if-shell "expr #{window_name} : '.*nvim' >/dev/null"  {
+#       unbind -n C-Space
+#   } {
+#     bind -n C-Space send-keys -K C-b
+#     }
+# }
+
 bind ^C new-window -c "$HOME"
 bind ^D detach
 bind * list-clients
