--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,7 +8,7 @@ source-file ~/.config/tmux/tmux.reset.conf
 # set-option -g terminal-overrides ',xterm-256color:RGB'
 # set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
-# set -g prefix ^space
+set -g prefix ^space
 set -g base-index 1              # start indexing windows at 1 instead of 0
 set -g detach-on-destroy off     # don't exit from tmux when closing a session
 set -g escape-time 0             # zero-out escape time delay
@@ -29,8 +29,8 @@ set -g mouse
 # set -g default-terminal tmux-256color
 set -as terminal-overrides ",alacritty*:Tc"
 
-# set -g prefix C-Space
-# bind C-Space send-prefix
+set -g prefix C-Space
+bind C-Space send-prefix
 
 # set -g prefix C-b
 
